Second Update with final touch

--- a/mygithub.html
+++ b/mygithub.html
@@ -41,9 +41,9 @@
         <br>
         <a href="https://github.com/EinsteinElaim/First-repository/archive/master.zip"> Clone/Download it here!</a>
         <p>My Portfolio Repository</p>
-        <a href="">Link to my portfolio repository, assignment for wk1 prep</a>
+        <a href="https://github.com/EinsteinElaim/My-Portfolio">Link to my portfolio repository, assignment for wk1 prep</a>
         <br>
-        <a href="">Clone/Download it here!</a>
+        <a href="https://github.com/EinsteinElaim/My-Portfolio/archive/master.zip">Clone/Download it here!</a>
     </div>
 </body>
 </html>
