final changes adding target blank to github repos links

--- a/contactme.html
+++ b/contactme.html
@@ -38,7 +38,7 @@
         <ul>
             <li><a href="https://www.google.com" target="_blank"><img src="/portfolio/images/googleplus.png" alt="Find me on google!" width="60px" height="60px"></a></li>
             <li><a href="https://m.facebook.com/einstein.green" target="_blank"><img src="/portfolio/images/facebook1.png" alt="Find me on facebook!" width="60px" height="60px"></a></li>
-            <li><a href="https://mobile.twitter,com/EliamEinstein" target="_blank"><img src="/portfolio/images/twitter.png" alt="Find me on twitter!" width="60px" height="60px"></a></li>
+            <li><a href="https://mobile.twitter.com/EliamEinstein" target="_blank"><img src="/portfolio/images/twitter.png" alt="Find me on twitter!" width="60px" height="60px"></a></li>
             <li><a href="https://www.linkedin.com" target="_blank"><img src="/portfolio/images/linkedin.png" alt="Find me on linkedin!" width="60px" height="60px"></a></li>
             <li><a href="https://www.instagram.com" target="_blank"><img src="/portfolio/images/instagram1.png" alt="Find me on instagram!" width="60px" height="60px"></a></li>
             <li><a href="https://api.whatsapp.com/send?phone=+254713136804" target="_blank"><img src="/portfolio/images/whatsapp1.png" alt="Find me on google!" width="60px" height="60px"></a></li>
