--- a/mygithub.html
+++ b/mygithub.html
@@ -32,16 +32,16 @@
     </div>
     <div class="repos">
         <p>My first repository on Week 1 moringa School</p>
-        <a href="https://github.com/EinsteinElaim/Moringa-Week-1">Link to project summarizing week 1 at Moringa Prep</a>
+        <a href="https://github.com/EinsteinElaim/Moringa-Week-1" target="_blank">Link to project summarizing week 1 at Moringa Prep</a>
         <br>
         <a href="https://github.com/EinsteinElaim/Moringa-Week-1/archive/moringawk1.zip">Clone/Download it here!</a>
         <br>
         <p>Payroll System Using Python</p>
-        <a href="https://github.com/EinsteinElaim/First-repository">Link to payroll system using python</a>
+        <a href="https://github.com/EinsteinElaim/First-repository" target="_blank">Link to payroll system using python</a>
         <br>
         <a href="https://github.com/EinsteinElaim/First-repository/archive/master.zip"> Clone/Download it here!</a>
         <p>My Portfolio Repository</p>
-        <a href="https://github.com/EinsteinElaim/My-Portfolio">Link to my portfolio repository, assignment for wk1 prep</a>
+        <a href="https://github.com/EinsteinElaim/My-Portfolio" target="_blank">Link to my portfolio repository, assignment for wk1 prep</a>
         <br>
         <a href="https://github.com/EinsteinElaim/My-Portfolio/archive/master.zip">Clone/Download it here!</a>
     </div>
