This is the final clean copy

--- a/aboutme.html
+++ b/aboutme.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <title>About Me</title>
-    <link rel = "icon" type = "image/png" href = "/portfolio/images/flowers.png" title="Freepik.com">
-    <link rel="stylesheet" type="text/css" href="/portfolio/css/styles.css">
+    <link rel = "icon" type = "image/png" href = "images/flowers.png" title="Freepik.com">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
     <div class="header">
@@ -11,7 +11,7 @@
     </div>
     <div class="navbar">
         <ul>
-            <li><img src="/portfolio/images/einstein.jpg" type="image/jpg" class="profilepicture" style="height: 200px; width: 200px; margin-top: 50px; border: 5pt green transparent; animation: change 10s infinite;"></img></li>
+            <li><img src="images/einstein.jpg" type="image/jpg" class="profilepicture" style="height: 200px; width: 200px; margin-top: 50px; border: 5pt green transparent; animation: change 10s infinite;"></img></li>
             <br> 
             <br>
             <br>
