--- a/contactme.html
+++ b/contactme.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>Contact Me</title>
-    <link rel="icon" type="image/png" href="/portfolio/images/flowers.png" title="Freepik.com">
-    <link rel="stylesheet" type="text/css" href="/portfolio/css/styles.css">
+    <link rel="icon" type="image/png" href="images/flowers.png" title="Freepik.com">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     <div class="navbar">
         
         <ul>
-            <li><img src="/portfolio/images/einstein.jpg" type="image/jpg" class="profilepicture" style="height: 200px; width: 200px; margin-top: 50px; border: 5pt green transparent; animation: change 10s infinite;"></img></li>
+            <li><img src="images/einstein.jpg" type="image/jpg" class="profilepicture" style="height: 200px; width: 200px; margin-top: 50px; border: 5pt green transparent; animation: change 10s infinite;"></img></li>
             <br> 
             <br>
             <br>
@@ -36,12 +36,12 @@
             &nbsp;
         </div>
         <ul>
-            <li><a href="https://www.google.com" target="_blank"><img src="/portfolio/images/googleplus.png" alt="Find me on google!" width="60px" height="60px"></a></li>
-            <li><a href="https://m.facebook.com/einstein.green" target="_blank"><img src="/portfolio/images/facebook1.png" alt="Find me on facebook!" width="60px" height="60px"></a></li>
-            <li><a href="https://mobile.twitter.com/EliamEinstein" target="_blank"><img src="/portfolio/images/twitter.png" alt="Find me on twitter!" width="60px" height="60px"></a></li>
-            <li><a href="https://www.linkedin.com" target="_blank"><img src="/portfolio/images/linkedin.png" alt="Find me on linkedin!" width="60px" height="60px"></a></li>
-            <li><a href="https://www.instagram.com" target="_blank"><img src="/portfolio/images/instagram1.png" alt="Find me on instagram!" width="60px" height="60px"></a></li>
-            <li><a href="https://api.whatsapp.com/send?phone=+254713136804" target="_blank"><img src="/portfolio/images/whatsapp1.png" alt="Find me on google!" width="60px" height="60px"></a></li>
+            <li><a href="https://www.google.com" target="_blank"><img src="images/googleplus.png" alt="Find me on google!" width="60px" height="60px"></a></li>
+            <li><a href="https://m.facebook.com/einstein.green" target="_blank"><img src="images/facebook1.png" alt="Find me on facebook!" width="60px" height="60px"></a></li>
+            <li><a href="https://mobile.twitter.com/EliamEinstein" target="_blank"><img src="images/twitter.png" alt="Find me on twitter!" width="60px" height="60px"></a></li>
+            <li><a href="https://www.linkedin.com" target="_blank"><img src="images/linkedin.png" alt="Find me on linkedin!" width="60px" height="60px"></a></li>
+            <li><a href="https://www.instagram.com" target="_blank"><img src="images/instagram1.png" alt="Find me on instagram!" width="60px" height="60px"></a></li>
+            <li><a href="https://api.whatsapp.com/send?phone=+254713136804" target="_blank"><img src="images/whatsapp1.png" alt="Find me on google!" width="60px" height="60px"></a></li>
         </ul>
     </div>
 </body>
